<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number|numberDecimal" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calculate"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/textBmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi" />

        <TextView
            android:id="@+id/textCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Category" />

        <ImageView
            android:id="@+id/imageCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/defaultt" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>